# Auto-Record-Mod

./: CMakeLists.txt  Mod.json
.github/workflows/: build.yml
src/: main.cpp
